# IndieStudio

./: CMakeLists.txt  CMakeSettings.json
include/: Bomb.hpp  Bot.hpp  Display.hpp  EventReceiver.hpp  Game.hpp  Graphique.hpp  ICharacter.hpp  Item.hpp  Load.hpp  Menu.hpp  Player.hpp  Save.hpp  my.h
save/: bomb.json  item.json  map  map.json  player.json
src/: Bomb.cpp  Bot.cpp  Display.cpp  EventReceiver.cpp  Game.cpp  Graphique.cpp  Item.cpp  Load.cpp  Menu.cpp  Player.cpp  Save.cpp  main.cpp
